finalisation des micromodules